landing page ui

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion Landing Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,22 +16,25 @@
             <li class="menu-item">contact</li>
         </ul>
         <div class="logo">
-            <img src="" alt="">
+            <a href="#">Logo</a>
+            <!-- <img src="" alt=""> -->
         </div>
         <ul class="menu">
             <li class="menu-item">signup</li>
             <li class="menu-item">login</li>
             <li class="menu-item bell">
-                <i class='bx bx-bell'></i>
+                <span>
+                    <i class='bx bx-bell'></i>
+                </span>
             </li>
         </ul>
     </header>
     <main class="main">
         <div class="container">
-            <div class="bg">
+            <!-- <div class="bg">
                 <img src="main-bg.png" alt="">
                 <img src="fashion-girl.png" alt="">
-            </div>
+            </div> -->
             <div class="hero">
                 <h1>The way discerning <span>lifestyle</span></h1>
                 <p>Life is hard enough already. Let us make it a little easier.</p>
@@ -39,6 +43,9 @@
                     <i class='bx bx-right-arrow-alt' ></i>
                     <span>Explore now</span>
                 </button>
+            </div>
+            <div class="model">
+                
             </div>
             <div class="feature">
                 <ul class="feature-list">
@@ -52,5 +59,8 @@
             </div>
         </div>
     </main>
+
+    <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
+
 </body>
 </html>
