--- a/index.html
+++ b/index.html
@@ -1,147 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fashion Landing Page</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header class="header">
-        <ul class="menu">
-            <li class="menu-item">about</li>
-            <li class="menu-item">how it works</li>
-            <li class="menu-item">contact</li>
-        </ul>
-        <div class="logo">
-            <a href="#">Logo</a>
-            <!-- <img src="" alt=""> -->
-        </div>
-        <ul class="menu">
-            <li class="menu-item">signup</li>
-            <li class="menu-item">login</li>
-            <li class="menu-item bell">
-                <span>
-                    <i class='bx bx-bell'></i>
-                </span>
-            </li>
-        </ul>
-    </header>
-    <main class="main">
-        <div class="container">
-            <!-- <div class="bg">
-                <img src="main-bg.png" alt="">
-                <img src="fashion-girl.png" alt="">
-            </div> -->
-            <div class="hero">
-                <h1><span class="hidetext">The way</span></h1>
-                <h1><span class="hidetext">discerning</span></h1>
-                <h1><span class="hidetext underline">lifestyle</span></h1>
-                <p><span class="hidetext">Life is hard enough already. Let us make it a little easier.</span></p>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+     <!-- OVERLAY
+    =============================== -->
+    <div class="overlay first"></div>
+    <div class="overlay second"></div>
+    <div class="overlay third"></div>
 
-                <button class="btn-arrow">
-                    <i class='bx bx-right-arrow-alt' ></i>
-                    <span>Explore now</span>
-                </button>
-            </div>
-            <div class="model">
-                <div class="bg"></div>
-                <img src="./portrait-young-happy-girl-holding-shopping-bags (1)_adobespark (1).png"  alt="">
-            </div>
-            <div class="feature">
-                <ul class="feature-list">
-                    <li class="feature-item">office wear</li>
-                    <li class="feature-item">night dressing</li>
-                    <li class="feature-item">swimmer</li>
-                    <li class="feature-item">party wear</li>
-                    <li class="feature-item">casual wear</li>
-                    <li class="feature-item">erotica</li>
-                </ul>
-            </div>
+     <!-- HEADER
+    =============================== -->
+    <header class="header">
+      <ul class="menu">
+        <li class="menu-item">about</li>
+        <li class="menu-item">how it works</li>
+        <li class="menu-item">contact</li>
+      </ul>
+      <div class="logo">
+        <a href="#">
+          <img src="./assets/images/logo.svg" alt="Fashion Logo">
+        </a>
+      </div>
+      <ul class="menu">
+        <li class="menu-item">signup</li>
+        <li class="menu-item">login</li>
+        <li class="menu-item bell">
+          <span>
+            <i class="bx bx-bell"></i>
+          </span>
+        </li>
+      </ul>
+    </header>
+
+     <!-- MAIN
+    =============================== -->
+    <main class="main">
+      <div class="container">
+        <div class="hero">
+          <h1><span class="hidetext">The way</span></h1>
+          <h1><span class="hidetext">discerning</span></h1>
+          <h1><span class="hidetext underline">lifestyle</span></h1>
+          <p>
+            <span class="hidetext"
+              >Life is hard enough already. Let us make it a little
+              easier.</span
+            >
+          </p>
+
+          <button class="btn-arrow">
+            <i class="bx bx-right-arrow-alt"></i>
+            <span>Explore now</span>
+          </button>
         </div>
+        <div class="model">
+          <div class="bg"></div>
+          <img
+            src="./assets/images/fashion_gig.png"
+            alt=""
+          />
+        </div>
+        <div class="feature">
+          <ul class="feature-list">
+            <li class="feature-item">office wear</li>
+            <li class="feature-item">night dressing</li>
+            <li class="feature-item">swimmer</li>
+            <li class="feature-item">party wear</li>
+            <li class="feature-item">casual wear</li>
+            <li class="feature-item">erotica</li>
+          </ul>
+        </div>
+      </div>
     </main>
 
     <!-- icons -->
     <script src="https://unpkg.com/boxicons@2.0.9/dist/boxicons.js"></script>
-     <!-- gsap -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-     <!-- three js -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- gsap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <!-- three js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
-     <script>
-        TweenMax.staggerFrom(".header ul.menu li.menu-item", 1.5, {
-            delay: 1.5,
-            opacity: 0,
-            y: "20",
-            ease: Expo.easeInOut,
-          },
-          0.08
-        );
-       
-        TweenMax.staggerFrom(".feature ul.feature-list li.feature-item", 1.5, {
-            delay: 1.5,
-            opacity: 0,
-            y: "20",
-            ease: Expo.easeInOut,
-          },
-          0.08
-        );
-  
-        TweenMax.from(".hero h1 .hidetext", 1.5, {
-          delay: 1,
-          y: "100%",
-          ease: Expo.easeInOut,
-        });
-  
-        TweenMax.from(".hero p .hidetext", 1.5, {
-          delay: 1.2,
-          y: "100%",
-          ease: Expo.easeInOut,
-        });
-      
-        TweenMax.from(".hero button.btn-arrow span", 1.5, {
-          delay: 1.2,
-          opacity: 0,
-          x: "-10",
-          ease: Expo.easeInOut,
-        });
-
-  
-        TweenMax.from("main .model", 2, {
-          delay: 1.5,
-        //   opacity: 0,
-          y: "-680",
-          ease: Expo.easeInOut,
-        });
-  
-        TweenMax.from("main .model img", 2.2, {
-          delay: 1.6,
-          opacity: 0,
-          y: "670",
-          ease: Expo.easeInOut,
-        });
-  
-  
-        TweenMax.to(".first", 1.5, {
-          delay: 0.5,
-          top: "-100%",
-          ease: Expo.easeInOut,
-        });
-  
-        TweenMax.to(".second", 1.5, {
-          delay: 0.7,
-          top: "-100%",
-          ease: Expo.easeInOut,
-        });
-  
-        TweenMax.to(".third", 1.5, {
-          delay: 1,
-          top: "-100%",
-          ease: Expo.easeInOut,
-        });
-      </script>
-
-</body>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
